// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`Link renders 1`] = `
<div>
  <div
    class="Picasso-root"
  >
    <a
      class="MuiTypography-root MuiLink-root MuiLink-underlineHover PicassoLink-root MuiTypography-colorPrimary"
    >
      Please verify your email
    </a>
  </div>
</div>
`;

exports[`Link renders a Link from react-router 1`] = `
<div>
  <div
    class="Picasso-root"
  >
    <div>
      <a
        class="MuiTypography-root MuiLink-root MuiLink-underlineHover PicassoLink-root MuiTypography-colorPrimary"
        href="/"
      >
        Please verify your email
      </a>
    </div>
  </div>
</div>
`;

exports[`Link renders native attributes 1`] = `
<div>
  <div
    class="Picasso-root"
  >
    <a
      class="MuiTypography-root MuiLink-root MuiLink-underlineHover PicassoLink-root MuiTypography-colorPrimary"
      download="filename"
      href="https://toptal.com/filename.txt"
      rel="noopener"
      target="_blank"
    >
      Please verify your email
    </a>
  </div>
</div>
`;
